<resources>
    <string name="app_name">Companion</string>
    <string name="a_title">AUTHENTICATION</string>
    <string name="authenticate">Use Fingerprint or enter the 4-digit PIN</string>
    <string name="dialog_message">Invalid Login Credentials</string>
    <string name="dialog_title">Invalid!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="setPinHint">Set a 4-Digit PIN</string>
    <string name="confirmPinHint">Confirm the 4 Digit PIN</string>
    <string name="check">✓</string>
</resources>
