<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/greyview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#60212121"
        android:translationZ="50dp"
        android:elevation="4dp"
        android:visibility="gone"/>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        style="@style/AVLoadingIndicatorView.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:translationZ="60dp"
        android:visibility="gone"
        app:indicatorColor="@android:color/white"
        app:indicatorName="LineScaleIndicator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/bg_gradient" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:paddingBottom="@dimen/padding"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:context="com.prozekt.companion.Login">

            <TextView
                android:id="@+id/usernameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:labelFor="@+id/username"
                android:padding="@dimen/padding"
                android:text="@string/username"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usernameLabel"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_text"
                android:drawablePadding="15dp"
                android:ems="12"
                android:inputType="textPersonName"
                android:padding="16dp" />

            <TextView
                android:id="@+id/passLabel"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/username"
                android:labelFor="@+id/password"
                android:padding="@dimen/padding"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passLabel"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_text"
                android:drawablePadding="15dp"
                android:ems="12"
                android:inputType="textPassword"
                android:padding="16dp" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_button"
                android:drawablePadding="15dp"
                android:padding="16dp"
                android:text="@string/submit"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>